# vscode-suricata-check-extension

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  noxfile.py  package-lock.json  package.json  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: pr.yml  release.yml
bundled/tool/: lsp_jsonrpc.py  lsp_runner.py  lsp_server.py  lsp_utils.py
src/common/: python.ts  server.ts  settings.ts
src/test/python_tests/: requirements.txt  test_server.py
src/test/python_tests/lsp_test_client/: constants.py  defaults.py  session.py  utils.py
src/test/python_tests/test_data/sample1/: sample.rules
